.provarCaches/00D6C0000000xA6UAI/objects/NSSCCConnector__SCC_Log__c.object
<CustomObject>
    <description>Databased based logging</description>
    <fields>
        <fullName>NSSCCConnector__Comment__c</fullName>
        <label>Comment</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__LogDetails__c</fullName>
        <label>LogDetails</label>
        <summaryForeignKey>NSSCCConnector__SCC_LogDetail__c.NSSCCConnector__LogId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Log_Name__c</fullName>
        <externalId>true</externalId>
        <label>Log Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Loglevel__c</fullName>
        <label>Loglevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>MONITOR</fullName>
                </value>
                <value>
                    <fullName>FATAL</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Object_Id__c</fullName>
        <description>Id of the record for which the log was created</description>
        <label>Object Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Object_Name__c</fullName>
        <description>Name of the object/function/process for which the log was created</description>
        <label>Object Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Done OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__Type__c</fullName>
        <description>Log type</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSSCCConnector__WorstLogLevel__c</fullName>
        <label>WorstLogLevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>MONITOR</fullName>
                </value>
                <value>
                    <fullName>FATAL</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>NSSCCConnector__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>